// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Work full-renders correctly 1`] = `
<Observer
  match={
    Object {
      "params": Object {
        "name": "painting",
      },
    }
  }
>
  <Images
    list={Array []}
    match={
      Object {
        "params": Object {
          "name": "painting",
        },
      }
    }
    onImageLoaded={[Function]}
  >
    <div>
      <div
        className="images"
      />
      <div
        className="back-to-top "
        onClick={[Function]}
      >
        <i
          aria-hidden="true"
          className="fa fa-step-forward fa-lg"
        />
      </div>
      <div
        className="back-to-top test"
      >
        0
      </div>
    </div>
  </Images>
</Observer>
`;

exports[`Work renders correctly 1`] = `
<div>
  <div
    className="images"
  />
  <div
    className="back-to-top "
    onClick={[Function]}
  >
    <i
      aria-hidden="true"
      className="fa fa-step-forward fa-lg"
    />
  </div>
  <div
    className="back-to-top test"
  >
    0
  </div>
</div>
`;

exports[`Work shallow-renders correctly 1`] = `
<Images
  list={Array []}
  match={
    Object {
      "params": Object {
        "name": "painting",
      },
    }
  }
  onImageLoaded={[Function]}
/>
`;
